main: create intake with docs
