# docs/swagger.json
@@ -6,11 +6,15 @@
     "paths": {
         "/dummyLogin": {
             "post": {
+                "description": "Получение тестового токена для разработки",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "auth"
                 ],
                 "summary": "Получение тестового токена",
                 "parameters": [
@@ -21,6 +25,19 @@
                         "required": true,
                         "schema": {
                             "type": "object"
+                        }
+                    },
+                    {
+                        "description": "User role",
+                        "name": "role",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "employee",
+                                "moderator"
+                            ]
                         }
                     }
                 ],
@@ -45,7 +62,7 @@
         },
         "/login": {
             "post": {
-                "description": "Authenticate user and return JWT token",
+                "description": "Аутентификация пользователя и получение JWT токена",
                 "consumes": [
                     "application/json"
                 ],
@@ -55,7 +72,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Login user",
+                "summary": "Авторизация пользователя",
                 "parameters": [
                     {
                         "description": "User login data",
@@ -69,12 +86,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Token",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "type": "string"
                         }
                     },
                     "401": {
@@ -96,13 +110,17 @@
                         "bearerAuth": []
                     }
                 ],
+                "description": "Создание нового пункта выдачи заказов (только для модераторов)",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Создание ПВЗ (только для модераторов)",
+                "tags": [
+                    "pvz"
+                ],
+                "summary": "Создание ПВЗ",
                 "parameters": [
                     {
                         "description": "PVZ data",
@@ -142,9 +160,243 @@
                 }
             }
         },
+        "/pvz/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Получение информации о пункте выдачи заказов по его ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pvz"
+                ],
+                "summary": "Получение ПВЗ по ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "PVZ ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.PVZ"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Обновление информации о пункте выдачи заказов (только для модераторов)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pvz"
+                ],
+                "summary": "Обновление ПВЗ",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "PVZ ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "PVZ data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PVZ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.PVZ"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Удаление пункта выдачи заказов (только для модераторов)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pvz"
+                ],
+                "summary": "Удаление ПВЗ",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "PVZ ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/receptions": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Создание новой приемки товаров (только для сотрудников ПВЗ)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "intake"
+                ],
+                "summary": "Создание новой приемки товаров",
+                "parameters": [
+                    {
+                        "description": "Intake data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    {
+                        "format": "uuid",
+                        "description": "PVZ ID",
+                        "name": "pvzId",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Intake"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
-                "description": "Register a new user with email, password and role",
+                "description": "Создание нового пользователя с email, паролем и ролью",
                 "consumes": [
                     "application/json"
                 ],
@@ -154,7 +406,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Register a new user",
+                "summary": "Регистрация пользователя",
                 "parameters": [
                     {
                         "description": "User registration data",
@@ -208,6 +460,23 @@
                     "type": "string"
                 },
                 "role": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Intake": {
+            "type": "object",
+            "properties": {
+                "DateTime": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "pvzId": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
